borsh/tests/roundtrip/snapshots/tests__roundtrip__test_ip_addr__ipaddr_vec_roundtrip.snap
---
source: borsh/tests/roundtrip/test_ip_addr.rs
expression: encoded
---
[
    3,
    0,
    0,
    0,
    0,
    192,
    168,
    0,
    1,
    1,
    32,
    1,
    13,
    184,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    1,
    254,
    128,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
]
