borsh/tests/roundtrip/snapshots/tests__roundtrip__test_ip_addr__ipv4_addr_roundtrip_enum.snap
---
source: borsh/tests/roundtrip/test_ip_addr.rs
expression: encoded
---
[
    0,
    192,
    168,
    0,
    1,
]
