borsh/tests/roundtrip/snapshots/tests__roundtrip__test_ip_addr__ipv6_addr_roundtrip.snap
---
source: borsh/tests/roundtrip/test_ip_addr.rs
expression: encoded
---
[
    32,
    1,
    13,
    184,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
]
